asana-ui-enhancement.user.css
/* ==UserStyle==
@name         Asana UI Enhancement
@description  Remove bloat, ads, make cards smaller and extraneous UI smaller.
@namespace    https://github.com/benhohner
@version      1.1.0
@author       benhohner <bennohner@gmail.com> (https://github.com/benhohner)
@homepageURL  https://github.com/benhohner/StylusThemes
@supportURL   https://github.com/benhohner/StylusThemes/issues
@updateURL    https://raw.githubusercontent.com/benhohner/StylusThemes/master/asana-ui-enhancement.user.css
@license      unlicense
@preprocessor stylus
==/UserStyle== */

@-moz-document domain("app.asana.com") {
	/* Remove Borders */
	.Sidebar-section {
		border-bottom: none;
	}

	.PageToolbarStructure--withShadow {
		border-top: none;
	}

	.PageToolbarStructure {
		border-top: none;
		border-bottom: none;
	}

	.TaskRow:not(.TaskRow--borderless)::after {
		border-bottom: none;
	}

	.SectionRow-sectionName {
		border-bottom: none;
	}

	.GutterContainer::before {
		width: auto;
		border-right: none;
	}

	.TaskStoryFeed-separator {
		display: none;
	}

	.TaskPaneAssigneeDueDateRowStructure {
		border-bottom: none;
	}

	.FollowersBar {
		border-top: none;
	}


	/* Topbar UI Improvements */
	.page-topbar {
		padding: 0 20px 0 0;
	}
	
	.ChipWithIcon {
		width: 60px;
		height: 60px;
		border-radius: 0;
	}
	
	.PageToolbarStructure {
		padding-left: 5px;
	}


	/* Remove Add Section button from list projects */
	.ItemListAddSectionButton {
		display: none;
	}

	/* Improve followers bar UI */
	.FollowersLabel {
		display: none;
	}

	.ToggleFollowButton-toggleButton {
		order: -1;
		margin-right: 10px;
		margin-left: 0;
	}

	/* Hide annoying ads */
	.SidebarInvite,
	.topbarContingentUpgradeButton-button,
	.TopbarPageHeaderGlobalActions-omnibutton,
	.TopbarPageHeaderGlobalActions-upgradeButton,
	.SidebarTopNavLinks-myPortfoliosbutton {
		display: none;
	}

	.TopbarHelpMenuButton {
		margin-left: 15px; /* Add some margin because preceding element is hidden */
	}

	.PageToolbarStructure {
		height: auto;
	}
	
	.BoardBody-columnHorizontalScrollable {
		padding: 25px 10px 0;
	}

	.TopbarSearchTypeahead,
	.TopbarPageHeaderStructure {
		height: 60px;
	}

	.Tab {
		padding-bottom: 2px;
	}

	/* Move add card button */
	.BoardColumn-addCardButton {
		margin-top: 0px;
		position: absolute;
		right: 10px;
	}

	.scrollable--vertical {
		overflow-y: scroll;
	}

	.scrollable--horizontal::-webkit-scrollbar,
	.scrollable--vertical::-webkit-scrollbar {
		width: 0 !important;
	}

	.scrollable--horizontal {
		overflow-x: scroll;
	}

	.BoardColumnWithSortableTasks-sortableList.is-empty::before {
		display: none;
	}

	/* Remove 1px translate */
	.BoardCardWithCustomProperties.BoardCardWithCustomProperties--hover {
		transform: none;
	}

	/* Resize and move pills / tags */
	.BoardCardWithCustomProperties-potPills {
	    margin-bottom: 0px;
	    position: absolute;
	    top: 4px;
	    left: 20px;
	    width: 100%;
	}

	.BoardCardPotPills-potPill {
		border-radius: 2px;
		height: 2px;
		margin: 0;
		width: 19%;
	}

	.SubtaskTaskRow-detailsButton.SubtaskTaskRow-detailsButton--hasMetadata {
		color: green;
		fill: green; /* More visible metadata button TODO: replace colour with colourscheme colour */
	}

	.SubtaskTaskRow-detailsButton {
		height: 34px; /* larger touch target */
	}

}

